--- a/echoid/apps/web/app/globals.css
+++ b/echoid/apps/web/app/globals.css
@@ -1,5 +1,7 @@
 @import "tailwindcss";
 
+@variant dark (&:where(.dark, .dark *));
+
 @theme {
   /* Register your Custom Fonts here */
   /* This automatically creates classes like: font-ashley, font-flake */
